--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,7 +14,8 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "mongoose": "^8.9.5"
+    "mongoose": "^8.9.5",
+    "vercel": "^39.3.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
