--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node index.ts",
-    "build": "tsc",
-    "serve": "node dist/index.js"
+    "start": "ts-node src/index.ts",
+    "build": "tsc"
   },
   "author": "Syed Nazmul Hossain",
   "license": "ISC",
