--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
+		"@iconify/svelte": "^4.2.0",
 		"@sveltejs/adapter-auto": "^4.0.0",
+		"@sveltejs/adapter-netlify": "^4.4.1",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/container-queries": "^0.1.1",
@@ -34,6 +36,11 @@
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^3.4.17",
 		"typescript": "^5.0.0",
+		"vercel": "^39.3.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"@iconify/icons-mdi": "^1.2.48",
+		"svelte-french-toast": "^1.2.0"
 	}
 }
